previous year section added

--- a/index.html
+++ b/index.html
@@ -3,8 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <title>Motivation</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/c629487606.js" crossorigin="anonymous"></script>
+
+    
 </head>
 <body>
+
+    <header class="header">
+        <div class="banner">
+            <div class="banner-left"></div>
+            <div class="banner-right">
+                <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
+                <p class="banner-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <button class="btn-primary">Contact Us</button>
+            </div>
+        </div>
+
+    </header>
+
+    <!--Previous Year Section-->
+    <section class="previous-year-section">
+        <!--.previous-year-container>.content*2-->
+        <div class="previous-year-container">
+            <div class="previous-year-left"><img src="images/person.png" alt="Person"></div>
+            <div class="previous-year-right">
+                <h2 class="section-title">My failures of previous year</h2>
+                <p class="previous-year-des">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <ul>
+                    <li><i class="fa-solid fa-check green"></i>  Contrary to popular belief, is not simply.</li>
+                    <li><i class="fa-solid fa-check green"></i>  Contrary to popular belief.</li>
+                    <li><i class="fa-solid fa-check green"></i>  Contrary to popular , is not simply.</li>
+                    <li><i class="fa-solid fa-check green"></i>  Contrary to popular belief, is not simply.</li>
+                    <li><i class="fa-solid fa-check green"></i>  Contrary to popular simply.</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
 
 </body>
 </html>
