--- a/index.html
+++ b/index.html
@@ -45,6 +45,35 @@
         </div>
     </section>
 
+    <!-- My Plans Section-->
+    <section class="my-plan">
+        <h2 class="section-title">My Plans</h2>
+        <!--.my-plan-container>.my-plan-item*4>img+h2+p-->
+        <div class="my-plan-container">
+            <div class="my-plan-item"><img src="images/icons/web.png" alt="">
+                <h2 class="my-plan-title">Web Development</h2>
+                <p class="my-plan-des">I want to start</p>
+            </div>
+            <div class="my-plan-item"><img src="images/icons/js.png" alt="">
+                <h2 class="my-plan-title">Javascript</h2>
+                <p class="my-plan-des">I want to learn</p>
+            </div>
+            <div class="my-plan-item"><img src="images/icons/smoke.png" alt="">
+                <h2 class="my-plan-title">Smoking Habit</h2>
+                <p class="my-plan-des">I want to end</p>
+            </div>
+            <div class="my-plan-item"><img src="images/icons/ecom.png" alt="">
+                <h2 class="my-plan-title">ecommerce</h2>
+                <p class="my-plan-des">I want to develop</p>
+            </div>
+        </div>
+
+        
+    </section>
+
+    <!-- Call Now Section-->
+    <section class="call-now"></section>
+
 
 </body>
 </html>
