footer section added

--- a/index.html
+++ b/index.html
@@ -72,7 +72,41 @@
     </section>
 
     <!-- Call Now Section-->
-    <section class="call-now"></section>
+    <section class="call-now">
+        <div class="call-container">
+            <img class="call-now-watch" src="images/watch.png" alt="watch">
+            <img class="call-now-gradient" src="images/gradient2.png" alt="gradient">
+            <div class="call-now-right"></div>
+            <div class="call-now-left">
+                <h2 class="call-now-title">Always keep a positive mindset</h2>
+                <button class="btn-secondary">Call Now</button>
+            </div>
+
+        </div>
+
+    </section>
+
+    <footer>
+        <div class="footer-left">
+            <!--h2.footer-title+p.footer-des+a*2.footer-call+img*3.footer-icon-->
+
+            <h2 class="footer-title"></h2>
+            <p class="footer-des"></p>
+            <a class="footer-mail" href="#"></a>
+            <a class="footer-call" href="#"></a>
+            <img src="images/icons/fb.png" alt="fb" class="footer-icon">
+            <img src="images/icons/twitter.png" alt="twiter" class="footer-icon">
+            <img src="images/icons/youtube.png" alt="youtube" class="footer-icon">
+        </div>
+        <div class="footer-right">
+            <h3 class="subscribe">Subscribe</h3>
+            <input class="email" type="email" placeholder="Enter Your email">
+            <button class="btn-secondary">Subscribe</button>
+        </div>
+
+    </footer>
+
+
 
 
 </body>
