--- a/index.html
+++ b/index.html
@@ -90,17 +90,24 @@
         <div class="footer-left">
             <!--h2.footer-title+p.footer-des+a*2.footer-call+img*3.footer-icon-->
 
-            <h2 class="footer-title"></h2>
-            <p class="footer-des"></p>
-            <a class="footer-mail" href="#"></a>
-            <a class="footer-call" href="#"></a>
-            <img src="images/icons/fb.png" alt="fb" class="footer-icon">
-            <img src="images/icons/twitter.png" alt="twiter" class="footer-icon">
-            <img src="images/icons/youtube.png" alt="youtube" class="footer-icon">
+            <h2 class="footer-title">Future</h2>
+            <p class="footer-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+
+            <a class="footer-mail" href="mailto:info@gmail.com">Email : info@gmail.com</a>
+            <br>
+            <a class="footer-mail" href="tel:01500 00 00 00">Phone : 01500 00 00 00</a>
+
+            <div class="footer-left-icons">
+                <img src="images/icons/fb.png" alt="fb" class="footer-icon">
+                <img src="images/icons/twitter.png" alt="twitter" class="footer-icon">
+                <img src="images/icons/youtube.png" alt="youtube" class="footer-icon">
+            </div>
+
         </div>
+
         <div class="footer-right">
             <h3 class="subscribe">Subscribe</h3>
-            <input class="email" type="email" placeholder="Enter Your email">
+            <input class="email" type="text" value="Enter Your email">
             <button class="btn-secondary">Subscribe</button>
         </div>
 
